1657 02062022 fixed overflow area

--- a/styles/scss/site/_home.scss
+++ b/styles/scss/site/_home.scss
@@ -145,7 +145,6 @@
       border-radius: 10px;
       position: relative;
       transition: all 0.3s ease;
-      overflow: hidden;
       &:hover{
         transform: scale(1.03);
       }
